--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "dev-par": "parcel src/parallax.html",
+    "dev-nre": "parcel src/nre.html"
   },
   "devDependencies": {
     "buffer": "^6.0.3",
