--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build",
-    "dev-par": "parcel src/parallax.html",
-    "dev-nre": "parcel src/nre.html"
+    "dev": "parcel src/index.html",
+    "rm-dist": "rm -rf dist",
+    "build": "parcel build --public-url ./",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "devDependencies": {
     "buffer": "^6.0.3",
+    "gh-pages": "^6.3.0",
     "parcel": "^2.14.0",
     "parcel-plugin-static-files-copy": "^2.6.0",
     "process": "^0.11.10",
